---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Bugfixes:
    - Fixed a crash when a ruin was spawned with a invalid recipe.
    - Fixed that the claim ruin control had no locale.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-09-28
  Bugfixes:
    - Fixed a crash when using a mod-provided ruin set and the rso mod is enabled.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-09-25
  Changes:
    - Ruins are no longer deconstructable by default.
    - Instead you have to claim them with a selection tool obtained with Shift + C or from the shortcut bar.
    - After claiming a ruin, you can deconstruct it.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-09-24
  Features:
    - Added 15 more ruins. 
    - Added russian translation (by Shadow_Man).
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-09-23
  Features:
    - Updated to Factorio 1.0.
    - Completely new ruin spawning algorithm and data structure.
    - Added 27 more ruins. 
    - Added a setting to make ruin defenses non-hostile.
    - Added a setting to select which ruin set to use.
    - Added the ability for other mods to add their own ruin sets.
    - Added scenario that spawns all ruins, for mod debug.
  Changes:
    - Ruins in forests are now less overgrown.
  Scripting:
    - Added a remote interface to disable ruin spawning.
    - Added a remote interface to exclude surfaces from ruin generation.
    - Added a remote interface for ruin sets.
  Bugfixes:
    - Fixed that ruins could spawn in space in the Space Exploration mod (again).
    - Fixed that my uses of set_tiles and entity.destroy were not raising events.