@@ -6,87 +6,87 @@ return
   },
   tiles =
   {
-    {"black-refined-concrete", {x = -5, y = -7}},
-    {"black-refined-concrete", {x = -5, y = -6}},
-    {"black-refined-concrete", {x = -5, y = 0}},
-    {"black-refined-concrete", {x = -5, y = 1}},
-    {"black-refined-concrete", {x = -5, y = 2}},
-    {"black-refined-concrete", {x = -5, y = 5}},
-    {"black-refined-concrete", {x = -4, y = -6}},
-    {"black-refined-concrete", {x = -4, y = -2}},
-    {"black-refined-concrete", {x = -4, y = -1}},
-    {"black-refined-concrete", {x = -4, y = 0}},
-    {"black-refined-concrete", {x = -4, y = 1}},
-    {"black-refined-concrete", {x = -4, y = 2}},
-    {"black-refined-concrete", {x = -4, y = 3}},
-    {"black-refined-concrete", {x = -4, y = 4}},
-    {"black-refined-concrete", {x = -4, y = 5}},
-    {"black-refined-concrete", {x = -4, y = 6}},
-    {"black-refined-concrete", {x = -3, y = -6}},
-    {"black-refined-concrete", {x = -3, y = -1}},
-    {"black-refined-concrete", {x = -3, y = 0}},
-    {"black-refined-concrete", {x = -3, y = 1}},
-    {"black-refined-concrete", {x = -3, y = 2}},
-    {"black-refined-concrete", {x = -3, y = 3}},
-    {"black-refined-concrete", {x = -3, y = 4}},
-    {"black-refined-concrete", {x = -3, y = 5}},
-    {"black-refined-concrete", {x = -3, y = 6}},
-    {"black-refined-concrete", {x = -2, y = -8}},
-    {"black-refined-concrete", {x = -2, y = -7}},
-    {"black-refined-concrete", {x = -2, y = -6}},
-    {"black-refined-concrete", {x = -2, y = -5}},
-    {"black-refined-concrete", {x = -2, y = -4}},
-    {"black-refined-concrete", {x = -2, y = -3}},
-    {"black-refined-concrete", {x = -2, y = -2}},
-    {"black-refined-concrete", {x = -2, y = -1}},
-    {"black-refined-concrete", {x = -2, y = 0}},
-    {"black-refined-concrete", {x = -2, y = 1}},
-    {"black-refined-concrete", {x = -2, y = 2}},
-    {"black-refined-concrete", {x = -2, y = 3}},
-    {"black-refined-concrete", {x = -2, y = 4}},
-    {"black-refined-concrete", {x = -2, y = 5}},
-    {"black-refined-concrete", {x = -2, y = 6}},
-    {"black-refined-concrete", {x = -1, y = -8}},
-    {"black-refined-concrete", {x = -1, y = -5}},
-    {"lab-white", {x = -1, y = -4}},
-    {"lab-white", {x = -1, y = -3}},
-    {"black-refined-concrete", {x = -1, y = -2}},
-    {"black-refined-concrete", {x = -1, y = -1}},
-    {"black-refined-concrete", {x = -1, y = 0}},
-    {"black-refined-concrete", {x = -1, y = 1}},
-    {"lab-white", {x = -1, y = 2}},
-    {"lab-white", {x = -1, y = 3}},
-    {"black-refined-concrete", {x = -1, y = 4}},
-    {"black-refined-concrete", {x = -1, y = 5}},
-    {"black-refined-concrete", {x = 0, y = -5}},
-    {"black-refined-concrete", {x = 0, y = -4}},
-    {"black-refined-concrete", {x = 0, y = -3}},
-    {"black-refined-concrete", {x = 0, y = 1}},
-    {"black-refined-concrete", {x = 0, y = 2}},
-    {"black-refined-concrete", {x = 0, y = 3}},
-    {"black-refined-concrete", {x = 0, y = 4}},
-    {"black-refined-concrete", {x = 0, y = 5}},
-    {"black-refined-concrete", {x = 1, y = -7}},
-    {"black-refined-concrete", {x = 1, y = -6}},
-    {"black-refined-concrete", {x = 1, y = -5}},
-    {"black-refined-concrete", {x = 1, y = -4}},
-    {"black-refined-concrete", {x = 1, y = 2}},
-    {"black-refined-concrete", {x = 1, y = 3}},
-    {"black-refined-concrete", {x = 1, y = 4}},
-    {"black-refined-concrete", {x = 2, y = -5}},
-    {"black-refined-concrete", {x = 2, y = -4}},
-    {"black-refined-concrete", {x = 2, y = -3}},
-    {"black-refined-concrete", {x = 2, y = 2}},
-    {"black-refined-concrete", {x = 2, y = 3}},
-    {"black-refined-concrete", {x = 2, y = 4}},
-    {"black-refined-concrete", {x = 3, y = -5}},
-    {"black-refined-concrete", {x = 3, y = -4}},
-    {"black-refined-concrete", {x = 3, y = -3}},
-    {"black-refined-concrete", {x = 3, y = -2}},
-    {"black-refined-concrete", {x = 3, y = -1}},
-    {"black-refined-concrete", {x = 3, y = 0}},
-    {"black-refined-concrete", {x = 3, y = 1}},
-    {"black-refined-concrete", {x = 3, y = 2}},
-    {"black-refined-concrete", {x = 3, y = 3}},
+    {"refined-concrete", {x = -5, y = -7}},
+    {"refined-concrete", {x = -5, y = -6}},
+    {"refined-concrete", {x = -5, y = 0}},
+    {"refined-concrete", {x = -5, y = 1}},
+    {"refined-concrete", {x = -5, y = 2}},
+    {"refined-concrete", {x = -5, y = 5}},
+    {"refined-concrete", {x = -4, y = -6}},
+    {"refined-concrete", {x = -4, y = -2}},
+    {"refined-concrete", {x = -4, y = -1}},
+    {"refined-concrete", {x = -4, y = 0}},
+    {"refined-concrete", {x = -4, y = 1}},
+    {"refined-concrete", {x = -4, y = 2}},
+    {"refined-concrete", {x = -4, y = 3}},
+    {"refined-concrete", {x = -4, y = 4}},
+    {"refined-concrete", {x = -4, y = 5}},
+    {"refined-concrete", {x = -4, y = 6}},
+    {"refined-concrete", {x = -3, y = -6}},
+    {"refined-concrete", {x = -3, y = -1}},
+    {"refined-concrete", {x = -3, y = 0}},
+    {"refined-concrete", {x = -3, y = 1}},
+    {"refined-concrete", {x = -3, y = 2}},
+    {"refined-concrete", {x = -3, y = 3}},
+    {"refined-concrete", {x = -3, y = 4}},
+    {"refined-concrete", {x = -3, y = 5}},
+    {"refined-concrete", {x = -3, y = 6}},
+    {"refined-concrete", {x = -2, y = -8}},
+    {"refined-concrete", {x = -2, y = -7}},
+    {"refined-concrete", {x = -2, y = -6}},
+    {"refined-concrete", {x = -2, y = -5}},
+    {"refined-concrete", {x = -2, y = -4}},
+    {"refined-concrete", {x = -2, y = -3}},
+    {"refined-concrete", {x = -2, y = -2}},
+    {"refined-concrete", {x = -2, y = -1}},
+    {"refined-concrete", {x = -2, y = 0}},
+    {"refined-concrete", {x = -2, y = 1}},
+    {"refined-concrete", {x = -2, y = 2}},
+    {"refined-concrete", {x = -2, y = 3}},
+    {"refined-concrete", {x = -2, y = 4}},
+    {"refined-concrete", {x = -2, y = 5}},
+    {"refined-concrete", {x = -2, y = 6}},
+    {"refined-concrete", {x = -1, y = -8}},
+    {"refined-concrete", {x = -1, y = -5}},
+    {"hazard-concrete-right", {x = -1, y = -4}},
+    {"hazard-concrete-right", {x = -1, y = -3}},
+    {"refined-concrete", {x = -1, y = -2}},
+    {"refined-concrete", {x = -1, y = -1}},
+    {"refined-concrete", {x = -1, y = 0}},
+    {"refined-concrete", {x = -1, y = 1}},
+    {"hazard-concrete-right", {x = -1, y = 2}},
+    {"hazard-concrete-right", {x = -1, y = 3}},
+    {"refined-concrete", {x = -1, y = 4}},
+    {"refined-concrete", {x = -1, y = 5}},
+    {"refined-concrete", {x = 0, y = -5}},
+    {"refined-concrete", {x = 0, y = -4}},
+    {"refined-concrete", {x = 0, y = -3}},
+    {"refined-concrete", {x = 0, y = 1}},
+    {"refined-concrete", {x = 0, y = 2}},
+    {"refined-concrete", {x = 0, y = 3}},
+    {"refined-concrete", {x = 0, y = 4}},
+    {"refined-concrete", {x = 0, y = 5}},
+    {"refined-concrete", {x = 1, y = -7}},
+    {"refined-concrete", {x = 1, y = -6}},
+    {"refined-concrete", {x = 1, y = -5}},
+    {"refined-concrete", {x = 1, y = -4}},
+    {"refined-concrete", {x = 1, y = 2}},
+    {"refined-concrete", {x = 1, y = 3}},
+    {"refined-concrete", {x = 1, y = 4}},
+    {"refined-concrete", {x = 2, y = -5}},
+    {"refined-concrete", {x = 2, y = -4}},
+    {"refined-concrete", {x = 2, y = -3}},
+    {"refined-concrete", {x = 2, y = 2}},
+    {"refined-concrete", {x = 2, y = 3}},
+    {"refined-concrete", {x = 2, y = 4}},
+    {"refined-concrete", {x = 3, y = -5}},
+    {"refined-concrete", {x = 3, y = -4}},
+    {"refined-concrete", {x = 3, y = -3}},
+    {"refined-concrete", {x = 3, y = -2}},
+    {"refined-concrete", {x = 3, y = -1}},
+    {"refined-concrete", {x = 3, y = 0}},
+    {"refined-concrete", {x = 3, y = 1}},
+    {"refined-concrete", {x = 3, y = 2}},
+    {"refined-concrete", {x = 3, y = 3}},
   }
 }
