@@ -2,31 +2,31 @@ return
 {
   tiles =
   {
-    {"red-refined-concrete", {x = -3.5, y = -2}},
-    {"red-refined-concrete", {x = -3.5, y = -1}},
-    {"red-refined-concrete", {x = -2.5, y = -3}},
-    {"red-refined-concrete", {x = -2.5, y = -2}},
-    {"red-refined-concrete", {x = -2.5, y = -1}},
-    {"red-refined-concrete", {x = -2.5, y = 0}},
-    {"red-refined-concrete", {x = -1.5, y = -3}},
-    {"red-refined-concrete", {x = -1.5, y = -2}},
-    {"red-refined-concrete", {x = -1.5, y = -1}},
-    {"red-refined-concrete", {x = -1.5, y = 0}},
-    {"red-refined-concrete", {x = -1.5, y = 1}},
-    {"red-refined-concrete", {x = -0.5, y = -1}},
-    {"red-refined-concrete", {x = -0.5, y = 0}},
-    {"red-refined-concrete", {x = -0.5, y = 1}},
-    {"red-refined-concrete", {x = -0.5, y = 2}},
-    {"red-refined-concrete", {x = 0.5, y = -3}},
-    {"red-refined-concrete", {x = 0.5, y = -2}},
-    {"red-refined-concrete", {x = 0.5, y = -1}},
-    {"red-refined-concrete", {x = 0.5, y = 0}},
-    {"red-refined-concrete", {x = 0.5, y = 1}},
-    {"red-refined-concrete", {x = 1.5, y = -3}},
-    {"red-refined-concrete", {x = 1.5, y = -2}},
-    {"red-refined-concrete", {x = 1.5, y = -1}},
-    {"red-refined-concrete", {x = 1.5, y = 0}},
-    {"red-refined-concrete", {x = 2.5, y = -2}},
-    {"red-refined-concrete", {x = 2.5, y = -1}},
+    {"stone-path", {x = -3.5, y = -2}},
+    {"stone-path", {x = -3.5, y = -1}},
+    {"stone-path", {x = -2.5, y = -3}},
+    {"stone-path", {x = -2.5, y = -2}},
+    {"stone-path", {x = -2.5, y = -1}},
+    {"stone-path", {x = -2.5, y = 0}},
+    {"stone-path", {x = -1.5, y = -3}},
+    {"stone-path", {x = -1.5, y = -2}},
+    {"stone-path", {x = -1.5, y = -1}},
+    {"stone-path", {x = -1.5, y = 0}},
+    {"stone-path", {x = -1.5, y = 1}},
+    {"stone-path", {x = -0.5, y = -1}},
+    {"stone-path", {x = -0.5, y = 0}},
+    {"stone-path", {x = -0.5, y = 1}},
+    {"stone-path", {x = -0.5, y = 2}},
+    {"stone-path", {x = 0.5, y = -3}},
+    {"stone-path", {x = 0.5, y = -2}},
+    {"stone-path", {x = 0.5, y = -1}},
+    {"stone-path", {x = 0.5, y = 0}},
+    {"stone-path", {x = 0.5, y = 1}},
+    {"stone-path", {x = 1.5, y = -3}},
+    {"stone-path", {x = 1.5, y = -2}},
+    {"stone-path", {x = 1.5, y = -1}},
+    {"stone-path", {x = 1.5, y = 0}},
+    {"stone-path", {x = 2.5, y = -2}},
+    {"stone-path", {x = 2.5, y = -1}},
   }
 }
